--- a/packs/acquisition.html
+++ b/packs/acquisition.html
@@ -62,10 +62,10 @@
 
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.ico"
+      href="../assets/images/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon" />
     <!--- End favicon-->
 
     <link
@@ -74,16 +74,16 @@
     />
     <!-- End google font  -->
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-    <link rel="stylesheet" href="assets/css/slick.css" />
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="../assets/css/slick.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css" />
+    <link rel="stylesheet" href="../assets/css/fontawesome.css" />
 
     <!-- Code Editor  -->
 
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/app.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/app.css" />
   </head>
 
   <body class="light">
@@ -116,7 +116,7 @@
           <div class="brand-logo">
             <a href="index.html">
               <img
-                src="assets/images/logo/logo-dark.png"
+                src="../assets/images/logo/logo-dark.png"
                 alt=""
                 class="light-version-logo"
               />
@@ -160,7 +160,7 @@
             <div class="col-xl-4 col-lg-12">
               <div class="zubuz-footer-textarea light">
                 <a href="">
-                  <img src="assets/images/logo/logo-white.png" alt="" />
+                  <img src="../assets/images/logo/logo-white.png" alt="" />
                 </a>
                 <p>The secret weapon for every Australian Broker.</p>
               </div>
@@ -190,16 +190,16 @@
     </footer>
 
     <!-- scripts -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/countdown.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/faq.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/isotope.pkgd.min.js"></script>
+    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/js/slick.js"></script>
+    <script src="../assets/js/countdown.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/faq.js"></script>
 
-    <script src="assets/js/app.js"></script>
+    <script src="../assets/js/app.js"></script>
 
     <!-- Add the redirect script here -->
     <script>
