--- a/packs/download.html
+++ b/packs/download.html
@@ -147,7 +147,7 @@
     <div class="section zubuz-section-padding2">
       <div class="container">
         <div class="zubuz-hero-content center position-relative">
-          <h1>Free Ebook</h1>
+          <h1>Downloading your free Ebook</h1>
         </div>
       </div>
     </div>
