updated home page copy

--- a/index.html
+++ b/index.html
@@ -147,11 +147,8 @@
     <div class="zubuz-hero-section">
       <div class="container">
         <div class="zubuz-hero-content center position-relative">
-          <h1>Quick and easy business loans for Brokers</h1>
-          <p>
-            Unique, bespoke loans for trail book purchases analyzed on cash
-            flow.
-          </p>
+          <h1>Quick and easy trail book loans for Brokers</h1>
+          <p>The leader in trail book lending for Brokers.</p>
           <div class="zubuz-hero-btn-wrap center">
             <a
               class="zubuz-default-btn"
