--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="zubuz-hero-section">
       <div class="container">
         <div class="zubuz-hero-content center position-relative">
-          <h1>Quick and easy trail book loans for Brokers</h1>
+          <h1>Quick and easy Trail Book loans for Brokers</h1>
           <p>The leader in trail book lending for Brokers</p>
           <div class="zubuz-hero-btn-wrap center">
             <a
