--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="container">
         <div class="zubuz-hero-content center position-relative">
           <h1>Quick and easy Trail Book loans for Brokers</h1>
-          <p>The leader in trail book lending for Brokers</p>
+          <p>The leader in Trail Book lending for Brokers</p>
           <div class="zubuz-hero-btn-wrap center">
             <a
               class="zubuz-default-btn"
