--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      if (window.location.hostname === "cocredit.com.au") {
+        window.location.href =
+          "https://www.cocredit.com.au" +
+          window.location.pathname +
+          window.location.search;
+      }
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Meta Pixel Code -->
