Added phone number

--- a/start.html
+++ b/start.html
@@ -180,8 +180,8 @@
         <div class="col-lg-6">
           <div class="zubuz-brand-logo-content">
             <h3>
-              “Co.Credit provides super easy loans to Brokers, empowering them
-              to create bigger, more profitable businesses”
+              "Co.Credit provides super easy loans to Brokers, empowering them
+              to create bigger, more profitable businesses"
             </h3>
             <p style="color: white">
               Bret Mullavey – Fintcap (Broker, Melbourne)
@@ -220,7 +220,7 @@
               <div class="zubuz-extara-mt">
                 <p>
                   <span class="font-semibold">No tangible security:</span> You
-                  don’t need a property to get funded
+                  don't need a property to get funded
                 </p>
               </div>
             </div>
@@ -258,7 +258,7 @@
                   <div class="zubuz-iconbox-data">
                     <span>Low Doc:</span>
                     <p>
-                      No financials required, we’re not interested in your
+                      No financials required, we're not interested in your
                       P&amp;L &amp; Balance Sheet
                     </p>
                   </div>
@@ -403,6 +403,7 @@
                   <img src="assets/images/logo/logo-dark.png" alt="" />
                 </a>
                 <p>The secret weapon for every Australian Broker.</p>
+                <p>1300 112 999</p>
               </div>
             </div>
             <div class="col-xl-3 col-md-4">
