--- a/contact.html
+++ b/contact.html
@@ -227,6 +227,19 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6">
+            <a href="tel:1300112999">
+              <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
+                <div class="zubuz-iconbox-icon">
+                  <img src="assets/images/icon/call2.svg" alt="" />
+                </div>
+                <div class="zubuz-iconbox-data light">
+                  <h3>Call us</h3>
+                  <p>1300 112 999<br /></p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-6">
             <div class="zubuz-iconbox-wrap-left text-center-lg rt-mb-24">
               <div class="zubuz-iconbox-icon">
                 <img src="assets/images/icon/map2.svg" alt="" />
@@ -255,6 +268,7 @@
                   <img src="assets/images/logo/logo-white.png" alt="" />
                 </a>
                 <p>The secret weapon for every Australian Broker.</p>
+                <p>1300 112 999</p>
               </div>
             </div>
             <div class="col-xl-3 col-md-4">
