--- a/thanks.html
+++ b/thanks.html
@@ -85,6 +85,33 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/app.css" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.cocredit.com.au/thanks.html" />
+    <meta property="og:title" content="Co.Credit - Thank you" />
+    <meta
+      property="og:description"
+      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
+    />
+    <meta
+      property="og:image"
+      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+
+    <!-- Twitter Card tags (optional but recommended) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Co.Credit - Thank you" />
+    <meta
+      name="twitter:description"
+      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
+    />
   </head>
 
   <body class="light">
