--- a/index.html
+++ b/index.html
@@ -84,6 +84,38 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/app.css" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.cocredit.com.au/" />
+    <meta property="og:title" content="Co.Credit - Trail Book Finance" />
+    <meta
+      property="og:description"
+      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
+    />
+    <meta
+      property="og:image"
+      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Co.Credit - Trail Book Finance" />
+    <meta
+      name="twitter:description"
+      content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.cocredit.com.au/assets/images/logo/logo.png"
+    />
+
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
 
   <body class="light">
