--- a/privacy.html
+++ b/privacy.html
@@ -189,10 +189,10 @@
               <h3>1. Your privacy is important to us</h3>
               <div class="zubuz-extara-mt">
                 <p>
-                  This policy outlines how Co.Credit pty. ltd. (collectively,
-                  “Co.Credit“) and their related companies and permitted assigns
-                  (“we / us / the Group“) collect, disclose, use, store or
-                  otherwise handle personal information.
+                  This policy outlines how Co.Credit Finance pty. ltd.
+                  (collectively, “Co.Credit“) and their related companies and
+                  permitted assigns (“we / us / the Group“) collect, disclose,
+                  use, store or otherwise handle personal information.
                 </p>
                 <p>
                   It is important to us that we manage your personal information
@@ -1055,7 +1055,8 @@
           <div class="zubuz-copywright light">
             <p>
               Approved applicants only. Conditions, fees and charges may apply.
-              Copyright &copy; 2024 | Co.Credit pty. ltd. | ABN 50 666 650 273
+              Copyright &copy; 2025 | Co.Credit Finance pty. ltd. | ABN 72 676
+              367 196
             </p>
           </div>
         </div>
