--- a/start.html
+++ b/start.html
@@ -450,7 +450,8 @@
           <div class="zubuz-copywright">
             <p>
               Approved applicants only. Conditions, fees and charges may apply.
-              Copyright &copy; 2024 | Co.Credit pty. ltd. | ABN 50 666 650 273
+              Copyright &copy; 2025 | Co.Credit Finance pty. ltd. | ABN 72 676
+              367 196
             </p>
           </div>
         </div>
