--- a/terms.html
+++ b/terms.html
@@ -187,7 +187,7 @@
             <div class="zubuz-default-content">
               <div class="zubuz-extara-mt">
                 <p>
-                  Co.Credit pty. ltd., its subsidiaries and affiliates
+                  Co.Credit Finance pty. ltd., its subsidiaries and affiliates
                   (“Co.Credit”) require that your use of Co.Credit’s website
                   (the “Website”) and online applications (including the
                   Customer Portal), services and tools (together with the
@@ -556,7 +556,8 @@
           <div class="zubuz-copywright light">
             <p>
               Approved applicants only. Conditions, fees and charges may apply.
-              Copyright &copy; 2024 | Co.Credit pty. ltd. | ABN 50 666 650 273
+              Copyright &copy; 2025 | Co.Credit Finance pty. ltd. | ABN 72 676
+              367 196
             </p>
           </div>
         </div>
