Added lead magnet page

--- a/index.html
+++ b/index.html
@@ -339,6 +339,16 @@
     </div>
     <!-- End section -->
 
+    <div class="section lead-magnet-highlight">
+      <a class="lead-magnet-link" href="lead-magnet.html">
+        <img
+          src="assets/images/lead-magnet.png"
+          alt="Co.Credit trail book guide cover"
+        />
+      </a>
+    </div>
+    <!-- End section -->
+
     <div class="section zubuz-section-padding3 bg-light">
       <div class="container">
         <div class="zubuz-section-title center">
