Adding in lead magnet page

--- a/lead-magnet.html
+++ b/lead-magnet.html
@@ -173,7 +173,9 @@
 
     <div class="zubuz-breadcrumb">
       <div class="container">
-        <h1 class="post__title">Buying a trail book</h1>
+        <h1 class="post__title">
+          Using trail book loans to double your revenue
+        </h1>
       </div>
     </div>
     <!-- End breadcrumb -->
@@ -183,19 +185,17 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="zubuz-default-content m-right">
-              <h2>Download the guide</h2>
-              <p>
-                Enter your details to download our guide on what to do and what
-                not to do when buying a trail book.
-              </p>
+              <h2 class="lead-magnet-subtitle">
+                Enter your details to download our acquisition PDF for free.
+              </h2>
               <div class="zubuz-extara-mt">
                 <div class="zubuz-iconbox-wrap-left d-block">
                   <div class="zubuz-iconbox-data data-small">
                     <span>What you'll learn:</span>
                     <p>
-                      Learn the key considerations for evaluating trail books,
-                      common pitfalls to avoid, and expert tips to navigate your
-                      purchase with confidence.
+                      What to look for when purchasing a trail book. How to set
+                      yourself up for success and how to avoid traps along the
+                      way.
                     </p>
                   </div>
                 </div>
